Update: alarm package

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,8 +8,7 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  alarm:
-    path: ../
+  alarm: ^4.0.0-dev.5
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
